Login button will now direct to game page

--- a/CS320_EscapeRoom/war/css/styles.css
+++ b/CS320_EscapeRoom/war/css/styles.css
@@ -15,7 +15,7 @@ body{
 .game-box{
     border: solid;
     color: white;
-    float: right;
+    float: center;
     width:500px;
     height: 500px;
     text-align: center;
