Added ASCII code to the title

--- a/CS320_EscapeRoom/war/css/styles.css
+++ b/CS320_EscapeRoom/war/css/styles.css
@@ -23,3 +23,10 @@ body{
     margin-top: 50px;
     margin-right: 50px;
 }
+
+
+.test-title{
+    color: white;
+    border-bottom: solid;
+    font-size: 15px;
+}
