--- a/CS320_EscapeRoom/war/css/styles.css
+++ b/CS320_EscapeRoom/war/css/styles.css
@@ -13,6 +13,7 @@ body{
 }
 
 .game-box{
+    margin: auto;
     border: solid;
     color: white;
     float: center;
@@ -20,8 +21,7 @@ body{
     height: 500px;
     text-align: center;
     border-width: 2px;
-    margin-top: 50px;
-    margin-right: 50px;
+    
 }
 
 
