jsp formatted better now

--- a/CS320_EscapeRoom/war/css/styles.css
+++ b/CS320_EscapeRoom/war/css/styles.css
@@ -26,7 +26,13 @@ body{
 
 
 .test-title{
+    margin: auto;
+    border: solid;
     color: white;
+    float: center;
+    width:1800px;
+    height: 300px;
     border-bottom: solid;
     font-size: 10px;
 }
+
